apps/podinfo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
spec:
  ports:
  - port: 9898
    targetPort: 9898
    protocol: TCP
  selector:
    app: podinfo
